--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^1.0.0",
     "prop-types": "^15.6.2",
+    "style-loader": "^0.23.1",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
   },
   "dependencies": {
+    "antd": "^3.10.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   }
