--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^1.0.0",
     "prop-types": "^15.6.2",
+    "react-transition-group": "^2.5.0",
     "style-loader": "^0.23.1",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
